# jetscii

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/actions/test/: action.yml
.github/workflows/: ci.yml
benches/: benchmarks.rs
proptest-regressions/: simd.txt
src/: fallback.rs  lib.rs  pattern.rs  pattern_3_impl.rs  simd.rs
src/v2/: mod.rs  pattern.rs  simd.rs
