[package]
name = "jetscii"
version = "0.4.1"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]

description = "A tiny library to efficiently search strings and byte slices for sets of ASCII characters or bytes."
readme = "README.md"
keywords = ["string", "bytes", "ascii", "search"]

homepage = "https://github.com/shepmaster/jetscii"
repository = "https://github.com/shepmaster/jetscii"
documentation = "https://shepmaster.github.io/jetscii/"

license = "MIT"

[features]
benchmarks = []
pattern = []

[dependencies]
pattern-3 = { optional = true, path = "pattern-3" }

[dev-dependencies]
proptest = "0.8.3"
libc = "0.2"
lazy_static = "1.0.0"
