[package]
name = "jetscii"
version = "0.5.3"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]

description = "A tiny library to efficiently search strings and byte slices for sets of ASCII characters or bytes."
readme = "README.md"
keywords = ["string", "bytes", "ascii", "search", "simd"]

repository = "https://github.com/shepmaster/jetscii"
documentation = "https://docs.rs/jetscii/"

license = "MIT OR Apache-2.0"

edition = "2018"

[features]
# This feature is now a no-op, but we keep it around for backwards compatibility
benchmarks = []
pattern = []

[dev-dependencies]
aho-corasick = "1.1.0"
proptest = "1.0.0"
lazy_static = "1.0.0"
region = "3.0.0"
memmap2 = "0.9.0"
criterion = "0.5.0"
memchr = "2.0.0"

[[bench]]
name = "benchmarks"
harness = false
